--- a/times.html
+++ b/times.html
@@ -61,5 +61,7 @@
         });
       });
     </script>
+
+    <p>List of serial ports</p> <p>baud rate</p> <p>hex command</p> <p>on or off</p> <p>name</p>
   </body>
 </html>
